Fix: Minor changes
